# vision_pilot

./: .cspell.json  .gitignore  Jenkinsfile  README.md  run_adas_demo.bat  run_adas_demo.ps1
VisionPilot/app/: CMakeLists.txt  vision_pilot.cpp
VisionPilot/config/: vision_pilot.conf.cpu.example  vision_pilot.conf.demo  vision_pilot_test.conf.demo
VisionPilot/development_releases/1.0/: CMakeLists.txt
VisionPilot/development_releases/1.0/app/: CMakeLists.txt  vision_pilot.cpp  vision_pilot_config.cpp  vision_pilot_config.hpp
VisionPilot/development_releases/1.0/modules/visualization/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/visualization/include/visualization/: visualization_to_webrtc.hpp
VisionPilot/development_releases/1.0/modules/visualization/src/: visualization_to_webrtc.cpp
VisionPilot/docker/: build.sh  docker-compose.demo.yml  docker-compose.yml  run.sh
VisionPilot/modules/middleware_interfaces/ros2_interface/control_cmd_publisher/: CMakeLists.txt
VisionPilot/modules/sensing/vehicle_interface/: CMakeLists.txt
VisionPilot/modules/sensing/vehicle_interface/include/vehicle_interface/: can_interface.hpp  file_interface.hpp
VisionPilot/modules/sensing/vehicle_interface/src/: can_interface.cpp  file_interface.cpp
VisionPilot/modules/visualization/: CMakeLists.txt
VisionPilot/tests/app/: test_vision_pilot.cpp
docs/: DEPLOYMENT.md
infra/jenkins/: README.md
infra/terraform/: README.md
infra/terraform/aws/: main.tf
infra/terraform/azure/: main.tf
infra/terraform/gcp/: main.tf
infra/terraform/modules/: cloud_init_ci.sh
(+23 files in other folders)
